# Grid-Zone-Counter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  map.txt  map_teknik.txt  ui.py  utils.hpp  zonecount_impl.cpp  zonecount_impl.hpp
include/: izonecount.hpp  utils.hpp  zonecount_impl.hpp
maps/: map.txt  map2.txt  map_circle.txt
scripts/: map_creator.py  ui.py
src/: main.cpp  zonecount_impl.cpp
